$Id: ChangeLog,v 1.29 2003/05/11 15:28:03 urabe Exp $

2003-05-11 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* ecore.c : Fixed version by N.Nakakawaji
	* ecore2.c : Fixed version by N.Nakakawaji (and added to CVS)
	
2003-04-29 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* if cygwin environment, check libcygipc.a
	* add one tip in win_hack.txt
	* delete shmx2 in AUTHORS
	* Version 1.1.15 released.

2003-04-25 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.14 released.
	* WIN_pkg now supports Cygwin environment.
	
2003-04-16 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
        * shmdump.c : bug fix (last sec not outputted in stdin mode)

2003-04-8 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
        * send_raw.c : added option -1 for 1 packet/sec mode
	* Version 1.1.13 released.

2003-04-4 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* recvts.c : avoid overwrite ch_table[] by memcpy(rbuf)
	* shmdump.c : rawdump (-r) mode
	* win.c : patch by S.Nakagawa not to die at SAVE without hypo
	* relay.c : bug fixed in optind, psize for stdin
	* recvt.c : added -N (no pno) and -A (no TS) options

2003-02-27 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* mkCDimage : suite for FreeBSD4.7 and Redhat7.2
	* manuals recvt.1,relay.1,send_raw.1 : updated.
	* recvt.c : disable resend request if -r option.

2003-01-22 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* wadd.c : eliminate blank line from ch file

2002-12-17 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* recvstatus2.c : bug fix
	* Version 1.1.12 released.
	
2002-12-10 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* relay.c : added options -i, -p, -t(-T) and in_port=0 for stdin

2002-11-29 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* recvt.c : corrected byte-order of port no. in log
	* send_raw.c : added option -p to set source port (-p src_port)

2002-10-27 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* shmdump.c : input from 'stdin' by specifying Shm key as '-'
	* send_raw.c : added -T option to set TTL
	* Version 1.1.10 released.
