@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.29 2003/05/11 15:28:03 urabe Exp $
+$Id: ChangeLog,v 1.30 2003/05/11 15:38:59 urabe Exp $
+
+2003-05-12 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
+	* win.c : 2003.5.2 version, added options -e and -i
+            -e [exclusively_use_ch_file], eg. '-e ch.tbl'
+            -i [exclusively_use_ch_(initial)letter(s)], eg. '-i 0b' to use only 0BXX
 
 2003-05-11 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
 	* ecore.c : Fixed version by N.Nakakawaji
